...
    Column(
        modifier = modifier
            .fillMaxSize() //makes the sheet extendable to full screen
            .verticalScroll(rememberScrollState()),
        verticalArrangement = Arrangement.spacedBy(8.dp)
    ) {
        Text(text = mealDetails.name, style = MaterialTheme.typography.headlineMedium, modifier = Modifier.testTag("details_meal_name"))
        Divider(color = Color(0xFFD0DBEA))
        Text(text = stringResource(R.string.instructions), style = MaterialTheme.typography.titleMedium)
        Text(text = mealDetails.instructions, style = MaterialTheme.typography.bodySmall)
        Divider(color = Color(0xFFD0DBEA))
        Text(text = stringResource(R.string.ingredients), style = MaterialTheme.typography.titleMedium)

...
        modifier = modifier
    ) {
        TopBarActionButton(
            icon = Icons.AutoMirrored.Filled.ArrowBack, onClick = onBackClick, modifier = Modifier
                .height(48.dp)
                .width(48.dp)
                .testTag("details_back_btn")
        )
        Spacer(Modifier.weight(1f))

        TopBarActionButton(
            icon = Icons.AutoMirrored.Outlined.Note,
            onClick = {},
...
        TopBarActionButton(
            icon = if (inCart) Icons.Filled.ShoppingCart else Icons.Outlined.ShoppingCart,
            onClick = onAddToCart,
            modifier = Modifier
                .height(48.dp)
                .width(48.dp)
                .testTag("details_add_to_cart_btn")
        )
    }
}

@Composable
private fun IngredientWithMeasure(ingredient: String, measure: String, modifier: Modifier) {
...
