...
    actionButtonIcon: ImageVector = Icons.Default.FavoriteBorder,
) {
    Card(
        modifier = modifier
            .width(244.dp)
            .clickable(onClick = onClick)
            .testTag("meal_tile"),
        border = BorderStroke(1.dp, colorResource(id = R.color.light_gray)),
    ) {
        Column {
            if (meal.thumbUrl == "") {
                Image(
                    painter = painterResource(id = R.drawable.dummy_dish_1),
...
                        .weight(1f)
                        .padding(horizontal = 10.dp)
                        .testTag("meal_tile_name"),
                    text = meal.name,
                    style = MaterialTheme.typography.titleMedium,
                )
                IconButton(onClick = onActionButtonClick, modifier = Modifier.testTag("meal_tile_add_to_fav_btn")) {
                    Icon(
                        imageVector = actionButtonIcon,
                        contentDescription = null,
                    )
                }
            }
...
