...
) {
    val coroutineScope = rememberCoroutineScope()
    val snackbarHostState = remember { SnackbarHostState() }
    val context = LocalContext.current

    Scaffold(
        modifier = modifier.testTag("favourites_screen_scaffold"),
        snackbarHost = {
            SnackbarHost(
                hostState = snackbarHostState,
                snackbar = { ActionSnackbar(it) }
            )
        },
...
